# python-discord-bots

./: .replit  README.md  pyproject.toml
Bots/MTG_Bot/: .json  None.json  bot.py  botprivate.py  dropdownmenu.py  mtg2.py  mtgBot.py  mtgcard.py  properites.py  uptimecog.py  webserver.py
Bots/MTG_Bot/Sets/: F07.json  G07.json  GTC.json  HA2.json  M11.json  PTG.json  ROE.json  RTR.json  SOI.json  SOK.json  UDS.json  UGL.json
Bots/MTG_Bot/cogs/: mtgcard.py  mtgcog.py
Bots/MTG_Bot/cogs/urls/: 10E_URL.fa  2ED_URL.fa  2XM_URL.fa  3ED_URL.fa  4BB_URL.fa  4ED_URL.fa  5DN_URL.fa  5ED_URL.fa  6ED_URL.fa  7ED_URL.fa  8ED_URL.fa  9ED_URL.fa  A25_URL.fa  AER_URL.fa  AFC_URL.fa  AFR_URL.fa  AKH_URL.fa  AKR_URL.fa  ALA_URL.fa  ALL_URL.fa  ANA_URL.fa  ANB_URL.fa  APC_URL.fa  ARB_URL.fa  ARC_URL.fa  ARN_URL.fa  ATH_URL.fa  ATQ_URL.fa  AVR_URL.fa  BBD_URL.fa  BFZ_URL.fa  BNG_URL.fa  BOK_URL.fa  BRB_URL.fa  BTD_URL.fa  C13_URL.fa  C14_URL.fa  C15_URL.fa  C16_URL.fa  C17_URL.fa  (+307 more)
Bots/economybot/: README.md  bot.py
Bots/economybot/cogs/: bankcommands.py  basicgames.py  basicinteraction.py  cardgames.py  example.py  infocog.py
Bots/economybot/data/: bankfunctions.py  dataadmin.py  eco.db  economyview.py  sqlite3connection.py
Bots/economybot/data/playingcards/: __init__.py  cards.py  cardsql.py  deck.py  hand.py  highcard.py  joker_card.py  links.anarchy  player.py
Bots/economybot/private/: botprivate.py
Bots/economybot/references/: __init__.py  confirm.py  dropdown_menu.py  highlowGUI.py
